# appimage_environment

./: Cargo.toml  LICENSE  README.md
appimage_needed_stuff/: init.desktop
src/examples/: get_envs.rs
src/lib/: environment.rs  internal_command.rs  mod.rs
