[package]
name = "appimage_environment"
version = "0.1.2"
authors = ["ph0llux <ph0llux@pm.me>"]
edition = "2018"
publish = false

[lib]
name = "appimage_environment"
path = "src/lib/mod.rs"
test = true
bench = true
edition = "2018"
crate-type = ["lib"]

[dependencies]
phollaits = "0.2"
walkdir = "2"
is_executable = "0.1.2"