[package]
name = "appimage_environment"
version = "0.2.1"
authors = ["ph0llux <ph0llux@pm.me>"]
edition = "2018"
publish = true
license =" BSD-3-Clause"
homepage = "https://github.com/ph0llux/appimage_environment"
repository = "https://github.com/ph0llux/appimage_environment"
readme = "README.md"
exclude = ["build/*", "doc/*", "appimage_example_stuff"]
documentation = "https://docs.rs/appimage_environment"
description = """
This crate contains some structs and functions to handle the tools, which are included in the AppImage.
"""


[lib]
name = "appimage_environment"
path = "src/lib/mod.rs"
test = true
bench = true
edition = "2018"
crate-type = ["lib"]

[dependencies]
phollaits = "0.2"
walkdir = "2"
is_executable = "0.1.2"